[package]
name = "HelloWorld"
version = "0.1.0"
authors = ["AndreiAlexandruDughila"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.1"
winapi = "0.3.8"
chrono = { version = "0.4", features = ["serde"] }
